# maude_alert_system

./: .envrc.template  .gitignore  .schema_cache.json  COMPLETED_IMPROVEMENTS_SUMMARY.md  DASHBOARD_IMPROVEMENTS_SUMMARY.md  Dockerfile  EDA_IMPROVEMENTS_SUMMARY.md  FINAL_LAYOUT_CONSISTENCY.md  LAYOUT_STANDARDIZATION_COMPLETED.md  LAYOUT_STANDARDIZATION_PLAN.md  MIGRATION_GUIDE.md  QUICK_FIXES_COMPLETED.md  README.md  TERMINOLOGY_SUMMARY.md  USER_FEEDBACK_TASKS.md  app.py  apply_terminology.py  docker-compose.yaml  download_data.sh  mdr_text_preprocess.bash  preprocess.bash  requirements.txt
.streamlit/: config.toml
airflow/dags/: bronze_dag.py  cluster_dag.py  gold_dag.py  ingest_dag.py  llm_dag.py  log_dag.py  silver_dag.py
code/: __init__.py  convert.py  download.py  preprocess.ipynb  process_cho.ipynb
code/loading/: __init__.py  data_loader.py  schema_collector.py
code/preprocess/: __init__.py  clean.py  config.py  preprocess.py  preprocessor.py
code/utils/: __init__.py  calculate_token.py  statistic.py  utils.py
config/: airflow.cfg  airflow.yaml  base.yaml  config.yaml  config_loader.py  data_config.yaml  download.yaml  extract.yaml  gold.yaml  loading.yaml  pipeline.yaml  preprocess.yaml  project_config.yaml  storage.yaml
config/dashboard/: README.md  TERMINOLOGY_GUIDE.md  defaults.yaml  sidebar.yaml  terminology.yaml  ui_standards.yaml
config/preprocess/: cleaning.yaml  clustering.yaml  columns.yaml  filtering.yaml  flatten.yaml  imputation.yaml  legacy_cleaning.yaml  llm_extraction.yaml  matching.yaml  pipeline.yaml  transform.yaml
dashboard/: Home.py  app.py  cluster_tab.py  eda_tab.py  overview_tab.py  spike_tab.py
dashboard/docs/: FILTER_COMPARISON.md  FILTER_REORGANIZATION_SUMMARY.md  REFACTORING_SUMMARY.md  SIDEBAR_ENABLED_DECORATOR.md
dashboard/utils/: __init__.py  analysis.py  analysis_cluster.py  constants.py  custom_css.py  dashboard_config.py  data_loader.py  data_manager.py  data_utils.py  filter_helpers.py  filter_manager.py  layout_templates.py  sidebar_manager.py  statistical_tests.py  terminology.py  ui_components.py
lib/: pyproject.toml
lib/src/maude_early_alert/: assets.py  deploy_udfs.py  logging_config.py
lib/src/maude_early_alert/analyze/: aggregation.py  base_analyzer.py  keyword_analyzer.py  mdr_extractor.py  prompt(ing).py  spike_detection.py  statistical_analysis.py  statistical_analysis_python.py
lib/src/maude_early_alert/loaders/: fda_extract.py  s3_load.py  snowflake_base.py  snowflake_load.py  text_extract.py
lib/src/maude_early_alert/loading/: fda_extract.py  s3_load.py  snowflake_base.py  snowflake_load.py
lib/src/maude_early_alert/pipelines/: bronze.py  cluster_pipeline.py  config.py  gold.py  ingest.py  llm_pipeline.py  pipeline.py  silver.py
lib/src/maude_early_alert/preprocess/: TypeCast.py  casting.py  cleaning.py  col_drop.py  column_select.py  combining.py  custom_sql.py  deriving.py  filtering.py  flattener.py  matching.py  missig_value.py  row_filter.py  udf_registry.py
lib/src/maude_early_alert/preprocessors/: clustering.py  column_select.py  custom_transform.py  flatten.py  imputation.py  mdr_extractor.py  metadata_add.py  prompt.py  row_filter.py  text_extract.py  type_cast.py  udi_match.py  value_clean.py
lib/src/maude_early_alert/udfs/: clean_text_udf.sql  fuzzy_match_score_udf.sql  remove_country_names_udf.sql
lib/src/maude_early_alert/utils/: __init__.py  config_loader.py  flattener_helper.py  helpers.py  secrets.py  sql_builder.py
notebooks/: 01_data_overview.ipynb  01_data_overview_cho.ipynb  02_preprocess.ipynb  02_udi_overview.ipynb  03_clustering_local.ipynb  03_preprocess_cho.ipynb  04_statistical_analysis.ipynb  04_udi_preprocess_cho.ipynb  05_spike_detection.ipynb  EDA_kim.ipynb  cluster.ipynb  cluster_stat_analyze.ipynb  colab_test.ipynb  download.ipynb  eda_merge.ipynb  mdr_preprocess.ipynb  oulier.ipynb  preprocess_cho.ipynb  preprocess_jung.ipynb  preprocess_kim.ipynb  preprocess_kim2.ipynb  preprocess_merge.ipynb  preprocess_s.ipynb  preprocess_shin.ipynb  product_code_eda_analyze_jung.ipynb  prompting_cho_vllm.ipynb  prompting_jung_1.ipynb  udi_clean.ipynb  이상치 탐지.ipynb  중복 확인.ipynb  중복치 전처리.ipynb
output/: duplicate_report_0009613348-2024-003465.csv
scripts/: airflow-init.bash  create_vllm_env.sh
src/: .schema_cache.json  __init__.py  download.ipynb  download_maude.py  preprocess_cho.ipynb  text_preprocess.py
src/loading/: __init__.py  data_loader.py  flattener.py  parquet_writer.py  schema_collector.py  zip_streamer.py
src/preprocess/: __init__.py  clean.py  config.py  domain_eda.py  eda.py  extractor.py  main.py  mdr.py  preprocess.py  prompt.py  serve_extractor.py  split_data.py  text_preprocess.py  transforms.py  udi.py  udi_preprocessor.py
src/preprocess2/: config.py
src/preprocess2/eda/: profiling.py  summaries.py
src/preprocess2/pipelines/: silver_pipeline.py
src/preprocess2/steps/: __init__.py  column_drop.py  data_cleaning.py  data_filtering.py
src/preprocess2/utils/: __init__.py  io.py  null.py  patterns.py  timer.py  uuid.py
src/preprocess2/validation/: consistency_checks.py  quality_reports.py
src/snowflake/: config.py  copy.py  read.py
src/utils/: __init__.py  baseline_aggregator.py  calculate_token.py  chunk.py  statistic.py  utils.py
src/utils/polars/: __init__.py  batch.py  memory.py  patterns.py
src/utils/visualization/: __init__.py  plotly_charts.py
