[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maude-early-alert"
version = "0.1.0"
description = "Custom Airflow utilities for My Company"
requires-python = ">=3.11"
dependencies = [
    # Core
    "structlog",
    "pyyaml",
    "pendulum",
    "requests",
    "tqdm",
    "pydantic",
    "tenacity",
    # Data
    "pandas",
    # AWS
    "boto3",
    "aws-secretsmanager-caching",
    # Snowflake
    "snowflake-connector-python[pandas]",
    "snowflake-snowpark-python",
    # OpenTelemetry (Snowflake connector tracing)
    "opentelemetry-api",
    "opentelemetry-sdk",
    # clustering
    "sentence-transformers",
    "hdbscan",
    # 시각화용
    "plotly"
]

[project.optional-dependencies]
gpu = [
    "torch",
    "torchvision",
    "transformers[torch]",
    "vllm",
    "openai",
    "cupy-cuda12x",
    "cuml-cu12",
]
udf = [
    "rapidfuzz",
    "country-named-entity-recognition",
    "clean-text",
]
airflow = [
    "apache-airflow",
    "apache-airflow-providers-snowflake",
    "apache-airflow-providers-amazon"
]
all = [
    "maude-early-alert[gpu,udf,airflow]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/maude_early_alert"]

# uv index 설정 - torch/vllm CUDA 빌드 소스
[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
vllm = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true