[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maude-early-alert"
version = "0.1.0"
description = "Custom Airflow utilities for My Company"
requires-python = ">=3.11"
dependencies = [
    # Core
    "structlog",
    "pyyaml",
    "pendulum",
    "requests",
    "tqdm",
    "pydantic",
    "tenacity",
    # Data
    "pandas",
    # AWS
    "boto3",
    "aws-secretsmanager-caching",
    # Snowflake
    "snowflake-connector-python[pandas]",
    "snowflake-snowpark-python",
    # OpenTelemetry (Snowflake connector tracing)
    "opentelemetry-api",
    "opentelemetry-sdk",
    # clustering
    "sentence-transformers",
    "hdbscan",
    # 통계 분석
    "scipy",
    "statsmodels",
    # 시각화용
    "plotly"
]

[project.optional-dependencies]
gpu = [
    "torch",
    "torchvision",
    "transformers[torch]",
    "vllm",
    "openai",
    "cupy-cuda12x",
    "cuml-cu12",
]
udf = [
    "rapidfuzz",
    "country-named-entity-recognition",
    "clean-text",
]
airflow = [
    "apache-airflow",
    "apache-airflow-providers-snowflake",
    "apache-airflow-providers-amazon"
]
all = [
    "maude-early-alert[gpu,udf,airflow]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/maude_early_alert"]

[tool.uv]
torch-backend = "auto"

# uv index 설정 - torch CUDA 빌드 소스 (vllm은 torch-backend=auto로 처리)
[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
cuml-cu12 = [
  { index = "nvidia-pypi", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "nvidia-pypi"
url = "https://pypi.nvidia.com"
explicit = true